# weather_air_dashboard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_api_clients.py
weather_air_dashboard/: app.py
weather_air_dashboard/api_clients/: iqair.py  openweather.py
weather_air_dashboard/data_processing/: analysis.py
weather_air_dashboard/visualisation/: plots.py  ui_components.py
